[gd_scene load_steps=25 format=3 uid="uid://yg36udxcefnq"]

[ext_resource type="Script" path="res://Player.gd" id="1_hhkal"]
[ext_resource type="Texture2D" uid="uid://b534mfloifpdt" path="res://resources/spritesheets/player.png" id="2_qt2wg"]
[ext_resource type="PackedScene" uid="uid://l762pn4pel86" path="res://lib/blink_effect.tscn" id="3_q0mqb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_js3i6"]
size = Vector2(16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvlqg"]
atlas = ExtResource("2_qt2wg")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8h4g8"]
atlas = ExtResource("2_qt2wg")
region = Rect2(33, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0kcq"]
atlas = ExtResource("2_qt2wg")
region = Rect2(33, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2l8ix"]
atlas = ExtResource("2_qt2wg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8blo1"]
atlas = ExtResource("2_qt2wg")
region = Rect2(33, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mommw"]
atlas = ExtResource("2_qt2wg")
region = Rect2(66, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4yd7"]
atlas = ExtResource("2_qt2wg")
region = Rect2(99, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlthe"]
atlas = ExtResource("2_qt2wg")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nne7a"]
atlas = ExtResource("2_qt2wg")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2kt4"]
atlas = ExtResource("2_qt2wg")
region = Rect2(33, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6v5yg"]
atlas = ExtResource("2_qt2wg")
region = Rect2(66, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m801i"]
atlas = ExtResource("2_qt2wg")
region = Rect2(99, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ismm6"]
atlas = ExtResource("2_qt2wg")
region = Rect2(132, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a00xn"]
atlas = ExtResource("2_qt2wg")
region = Rect2(165, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0o4q1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvlqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h4g8")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0kcq")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2l8ix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8blo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mommw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4yd7")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlthe")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nne7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2kt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6v5yg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m801i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ismm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a00xn")
}],
"loop": true,
"name": &"Run",
"speed": 15.0
}]

[sub_resource type="Animation" id="Animation_7n8rd"]
resource_name = "Death"

[sub_resource type="Animation" id="Animation_ypmip"]
resource_name = "Idle"

[sub_resource type="Animation" id="Animation_dswao"]
resource_name = "Jump"

[sub_resource type="Animation" id="Animation_lytk1"]
resource_name = "Run"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g7eyr"]
_data = {
"Death": SubResource("Animation_7n8rd"),
"Idle": SubResource("Animation_ypmip"),
"Jump": SubResource("Animation_dswao"),
"Run": SubResource("Animation_lytk1")
}

[node name="Player" type="CharacterBody2D"]
top_level = true
script = ExtResource("1_hhkal")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_js3i6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -3)
sprite_frames = SubResource("SpriteFrames_0o4q1")
animation = &"Death"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 1152
limit_bottom = 528

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g7eyr")
}

[node name="BlinkEffect" parent="." instance=ExtResource("3_q0mqb")]

[node name="DeathTimer" type="Timer" parent="."]

[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
